--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "bootstrap": "^5.1.0",
     "bootstrap-react": "^0.5.0-alpha.14",
     "firebase": "^7.2.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sweetalert": "^2.1.2",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
